Fix - Tile spacing

--- a/src/app/tickets/_tickets.scss
+++ b/src/app/tickets/_tickets.scss
@@ -222,7 +222,7 @@ input.ng-invalid-field-required-class {
     .bdr-top--purple.boxin {
         padding: 0 0 15px 0;
         .itemContent {
-            padding: 70px 20px 45px 20px;
+           padding: 20px 20px 45px 20px;
         }
     }
 }
